# eventgraph

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
sampledata/: events.csv
src/: args.rs  csv.rs  logging.rs  main.rs
