[package]
name = "eventgraph"
version = "0.1.0"
edition = "2021"
allow = ["unused", "unused_variables", "unused_imports"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
# import chrono
chrono = "0.4.23"